<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:scrollbars="vertical"
    android:layout_gravity="center"
    android:layout_centerInParent="true"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorFormBack"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@color/colorPrimary"
            android:text="@string/post_label"
            android:textAlignment="center"
            android:textColor="@color/cardview_light_background"
            android:textSize="10pt">
        </TextView>

        <EditText
            android:id="@+id/edit_text_website"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="@string/website_name_hint"
            android:textColorHint="@color/cardview_dark_background"
            android:inputType="text"
            android:textColor="@color/cardview_dark_background"
            android:textSize="8pt"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:layout_gravity="center">
        </EditText>

        <EditText
            android:id="@+id/edit_text_link"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="@string/link"
            android:textColorHint="@color/cardview_dark_background"
            android:inputType="text"
            android:textColor="@color/cardview_dark_background"
            android:textSize="8pt"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:layout_gravity="center">
        </EditText>

        <Spinner
            android:id="@+id/spinner_type"
            android:prompt="@string/type"
            android:entries="@array/typelist"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center">
        </Spinner>

        <TextView
            android:id="@+id/text_view_rating"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:text="@string/rating"
            android:textColor="@color/cardview_dark_background"
            android:textSize="8pt"
            android:layout_marginTop="20dp"
            android:layout_gravity="center">
        </TextView>

        <RatingBar
            android:id="@+id/rating_rating_bar"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:numStars="5"
            android:stepSize=".5"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            style="?android:attr/ratingBarStyleIndicator">
        </RatingBar>

        <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/submit_button"
            android:layout_gravity="center">
        </Button>
    </LinearLayout>
</ScrollView>